# socialcrop

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
src/socialcrop/: __init__.py  cli.py  config.py  core.py  crop.py  platforms.py  utils.py
src/socialcrop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_core.py  test_crop.py  test_platforms.py  test_utils.py
